--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="ja">
   <head>
-	  <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="tips/ecs1.css">
     <style type="text/css">
       <!--
