--- a/tips/graph.html
+++ b/tips/graph.html
@@ -6,7 +6,7 @@
 
   <head>
 
-    <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset="UTF-8">
 
     <title>グラフ作成時の注意</title>
 
@@ -142,3 +142,4 @@
 
 
 </html>
+
