--- a/setup/index.html
+++ b/setup/index.html
@@ -3,7 +3,7 @@
 
 <html lang="ja">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+    <meta http-equiv="Content-Type" content="text/html; charset="UTF-8">
 <!--    <link rel="stylesheet" type="text/css" href="TIPS/ecs1.css">-->
     <style type="text/css">
       <!--
@@ -58,34 +58,35 @@
 	}
 	-->
     </style>
-    <title>2021”N“x@•¡ŽGŒn‰ÈŠw‰‰K</title>
+    <title>2021å¹´åº¦ã€€è¤‡é›‘ç³»ç§‘å­¦æ¼”ç¿’</title>
   </head>
   <body>
     <hr>
-    <h1>2021”N“x@•¡ŽGŒn‰ÈŠw‰‰K</h1>
+    <h1>2021å¹´åº¦ã€€è¤‡é›‘ç³»ç§‘å­¦æ¼”ç¿’</h1>
 
-    <h2>‚¨’m‚ç‚¹</h2>
-    <h2>’S“–‹³ˆõ(‹Žº)</h2>
+    <h2>ãŠçŸ¥ã‚‰ã›</h2>
+    <h2>æ‹…å½“æ•™å“¡(å±…å®¤)</h2>
     <p>
       <ul>
-	<li>ƒEƒ‰ƒWƒ~[ƒ‹EƒŠƒ„ƒ{ƒt (129)</li>
-	<li>ìŒû ‘ (234)</li>
+	<li>ã‚¦ãƒ©ã‚¸ãƒŸãƒ¼ãƒ«ãƒ»ãƒªãƒ¤ãƒœãƒ• (129)</li>
+	<li>å·å£ è¡ (234)</li>
       </ul>
     </p>
-    <h2>Žö‹Æ—\’è</h2>
+    <h2>æŽˆæ¥­äºˆå®š</h2>
     <p>
       <table border>
-	<tr><th>“à—e</th><th>Ž‘—¿“™</th><th>“ú’ö</th></tr>
-	<tr><td>“±“üEŠÂ‹«‚ÌŠm”F</td><td><a href="c_test.html">CŠÂ‹«‚ÌŠm”F</a></td><td>9/28</td></tr>
-	<tr><td>ƒƒWƒXƒeƒBƒbƒNŽÊ‘œ</td><td><a href="logistic.html">ƒƒWƒXƒeƒBƒbƒNŽÊ‘œ</td><td>10/5,12,19,26,11/2</td></tr>
-	<tr><td>1ŽŸŒ³,2ŽŸŒ³Œn‚ÌƒJƒIƒX</td><td><a href="yura.html">Ž‘—¿</a></td><td>11/9,16,26,30</td></tr>
-	<tr><td>Hennon map‚Ì‘ŠŠÖŽŸŒ³</td><td><a href="riabov.html">Ž‘—¿</a></td><td>12/7,21,1/11,18</td></tr>
+	<tr><th>å†…å®¹</th><th>è³‡æ–™ç­‰</th><th>æ—¥ç¨‹</th></tr>
+	<tr><td>å°Žå…¥ãƒ»ç’°å¢ƒã®ç¢ºèª</td><td><a href="c_test.html">Cç’°å¢ƒã®ç¢ºèª</a></td><td>9/28</td></tr>
+	<tr><td>ãƒ­ã‚¸ã‚¹ãƒ†ã‚£ãƒƒã‚¯å†™åƒ</td><td><a href="logistic.html">ãƒ­ã‚¸ã‚¹ãƒ†ã‚£ãƒƒã‚¯å†™åƒ</td><td>10/5,12,19,26,11/2</td></tr>
+	<tr><td>1æ¬¡å…ƒ,2æ¬¡å…ƒç³»ã®ã‚«ã‚ªã‚¹</td><td><a href="yura.html">è³‡æ–™</a></td><td>11/9,16,26,30</td></tr>
+	<tr><td>Hennon mapã®ç›¸é–¢æ¬¡å…ƒ</td><td><a href="riabov.html">è³‡æ–™</a></td><td>12/7,21,1/11,18</td></tr>
 	<tr><td></td><td></td><td></td></tr>
       </table>
     </p>
-    <h2>Žö‹Æ•â•Ž‘—¿</h2>
+    <h2>æŽˆæ¥­è£œåŠ©è³‡æ–™</h2>
     <ul>
-      <li><a href="HowtoGNUPLOT/Toc.html">GNUPLOT‚ÌŽg‚¢•û@ŠT—v</a></li>
+      <li><a href="HowtoGNUPLOT/Toc.html">GNUPLOTã®ä½¿ã„æ–¹ã€€æ¦‚è¦</a></li>
     </ul>
     <hr>
 </body></html>
+
