--- a/HowtoGNUPLOT/Toc.html
+++ b/HowtoGNUPLOT/Toc.html
@@ -1,8 +1,12 @@
-<html>
+<!DOCTYPE html>
 
-  <title>How to configure and use GNUPLOT</title>
+<html lang="ja">
 
-  <body>
+	<head>
+		<meta charset="UTF-8">
+		<title>How to configure and use GNUPLOT</title>
+	</head>
+	<body>
 
     <center>
 
@@ -123,6 +127,7 @@
     </body>
 
 </html>
+
 
 
 
