--- a/HowtoGNUPLOT/Toc_hasegawa.html
+++ b/HowtoGNUPLOT/Toc_hasegawa.html
@@ -1,42 +1,89 @@
-<html>
-  <title>How to configure and use GNUPLOT</title>
-  <body>
-    <center>
-      <hr>
-      <font size=5>GNUPLOT‚Ìİ’è‚Æg‚¢•û / How to configure and use GNUPLOT</font>
-      <hr>
-    </center>
-    <b>İ’è <font color="maroon">How to set up</font></b><br>
-    <ul>
-      <li><a href="HowtoGNUPLOT-00.html">ì‹ÆƒtƒHƒ‹ƒ_‚Ìİ’è</a> <font color="maroon">Set work folder</font></li>
-      <li><a href="HowtoGNUPLOT-01.html">ƒtƒHƒ“ƒgƒTƒCƒY‚Ìİ’è</a> <font color="maroon">Choose font size</font></li>
-      <li><a href="HowtoGNUPLOT-03.html">İ’è‚Ì‹L˜^</a> <font color="maroon">Save initial state</font>  wgnuplot.ini</li>
-    </ul><p>
-      <b>g‚¢•û <font color="maroon">How to use</font></b><br>
-      <ul>
-	<li><a href="HowtoGNUPLOT-04.html">‚Æ‚É‚©‚­ƒvƒƒbƒg</a> <font color="maroon">Simple plot at first</font> <tt>plot x</tt></li>
-	<li><a href="HowtoGNUPLOT-05.html">‰¡²‚Ì•`‰æ”ÍˆÍ‚Ìw’è</a> <font color="maroon">Range of abscissa</font>  <tt>plot [AAA:BBB] x</tt></li>
-	<li><a href="HowtoGNUPLOT-06.html">c²‚Ì•`‰æ”ÍˆÍ‚Ìw’è</a> <font color="maroon">Range of ordinate</font>  <tt>plot [AAA:BBB][CCC:DDD] x</tt></li>
-	<li><a href="HowtoGNUPLOT-07.html">•ûŠá‚ğ“ü‚ê‚é</a> <font color="maroon">graph paper mode</font>  <tt>set grid</tt></li>
-	<li><a href="HowtoGNUPLOT-08.html">•ûŠá•\¦‚ğ‚â‚ß‚é</a> <font color="maroon">eliminating grid</font>  <tt>set nogrid</tt></li>
-	<li><a href="HowtoGNUPLOT-09.html">•¡”‚ÌƒOƒ‰ƒt‚ğ“¯•`‰æ</a> <font color="maroon">plotting some graphs</font>  <tt>plot x,2*x</tt></li>
-	<li><a href="HowtoGNUPLOT-10.html">•`‰æ”ÍˆÍ‚ğw’è‚µ‚Ä•¡”‚ÌƒOƒ‰ƒt‚ğ•`‚­E‰—p–â‘è</a> <font color="maroon">to plot some graphs in given area.</font>  <tt>plot [AAA:BBB] x,2*x</tt></li>
-	<li><a href="HowtoGNUPLOT-11.html">‰“™ŠÖ”‚Ì•`‰æE—ûK–â‘è</a> <font color="maroon">To plot elemental functions</font>  <tt>plot sin(x)</tt></li>
-	<li><a href="HowtoGNUPLOT-12.html">‘Î”–Ú·</a> <font color="maroon">logarithmic scale</font>  <tt>set log y</tt></li>
-	<li><a href="HowtoGNUPLOT-13.html">ƒf[ƒ^ƒvƒƒbƒg‚Éƒ`ƒƒƒŒƒ“ƒW</a> <font color="maroon">data plot</font> </li>
-	<li><a href="HowtoGNUPLOT-14.html">ƒ[ƒŒƒ“ƒcƒAƒgƒ‰ƒNƒ^‚ğƒvƒƒbƒg‚µ‚Ä‚İ‚é</a> <font color="maroon">To plot Lorenz attractor</font>  <tt>plot "Lorenz.dat"</tt></li>
-	<li><a href="HowtoGNUPLOT-15.html">c¥‰¡²‚ÉŒ©o‚µ(label)‚ğ‚Â‚¯‚é</a>  <font color="maroon">To put axis label</font>  <tt>set xlabel "AAA"</tt></li>
-	<li><a href="HowtoGNUPLOT-16.html">‚RŸŒ³‹óŠÔ“à‚É‹O“¹‚ğ•`‰æ</a> <font color="maroon">Displaying trajectories in 3-dim. space</font>  <tt>splot "Lorenz.dat" using 2:3:4</tt></li>
-	<li><a href="HowtoGNUPLOT-16.5.html">‚QŸŒ³‹È–Ê‚Ì•\¦</a> </li>
-	<li><a href="HowtoGNUPLOT-17.html">ƒf[ƒ^ƒtƒ@ƒCƒ‹‚Æ”ŠwŠÖ”‚ÌƒOƒ‰ƒt‚ğ“¯‚É•`‰æ</a> <font color="maroon">To plot data and function graph</font>  <tt>plot "Lorenz.dat",sin(x)</tt></li>
-	<li><a href="HowtoGNUPLOT-18.html">–}—á(title)‚Ìİ’è</a> <font color="maroon">To set title of each graph</font>  <tt>plot x title "y=x"</tt></li>
-	<li><a href="HowtoGNUPLOT-19.html">‰¡²‚Ì–Ú·‚Ìİ’è</a> <font color="maroon">To set ticks mode of abscissa</font>  <tt>set xtics AAA,BBB,CCC</tt></li>
-	<li><a href="HowtoGNUPLOT-20.html">¬–Ú·‚Ìİ’è‚Æ•ûŠá‚ğ“ü‚ê‚é</a> <font color="maroon">Setting small ticks and grid</font> <tt>set mxtics AAA</tt></li>
-	<li><a href="HowtoGNUPLOT-21.html">”CˆÓ‚ÌˆÊ’u‚É–Ú·‚ğ“ü‚ê‚é</a> <font color="maroon">To put tick at arbitral position</font>  <tt>set xtics("AAA" XXX,"BBB" YYY,...)</tt></li>
-	<li><a href="HowtoGNUPLOT-22.html">•\¦‚ğƒNƒŠƒbƒvƒ{[ƒh‚Éæ‚è‚Ş</a> <font color="maroon">How to put graph into clipboard</font></li>
-	<li><a href="HowtoGNUPLOT-23.html">ƒfƒBƒŒƒNƒgƒŠ‚ğˆµ‚¤ƒRƒ}ƒ“ƒh</a> <font color="maroon">How to change directory, etc.</font></li>
-      </ul>
-    <hr>
-    <a href="../index.html">•¡GŒn‰ÈŠw‰‰K I ‚Ìƒy[ƒW‚Ö–ß‚é</a>@
-    </body>
-</html>
+<html>
+<!DOCTYPE html>
+
+<html lang="ja">
+
+	<head>
+		<meta charset="UTF-8">
+		<title>How to configure and use GNUPLOT</title>
+	</head>  <body>
+
+    <center>
+
+      <hr>
+
+      <font size=5>GNUPLOTã®è¨­å®šã¨ä½¿ã„æ–¹ / How to configure and use GNUPLOT</font>
+
+      <hr>
+
+    </center>
+
+    <b>è¨­å®š <font color="maroon">How to set up</font></b><br>
+
+    <ul>
+
+      <li><a href="HowtoGNUPLOT-00.html">ä½œæ¥­ãƒ•ã‚©ãƒ«ãƒ€ã®è¨­å®š</a> <font color="maroon">Set work folder</font></li>
+
+      <li><a href="HowtoGNUPLOT-01.html">ãƒ•ã‚©ãƒ³ãƒˆã‚µã‚¤ã‚ºã®è¨­å®š</a> <font color="maroon">Choose font size</font></li>
+
+      <li><a href="HowtoGNUPLOT-03.html">è¨­å®šã®è¨˜éŒ²</a> <font color="maroon">Save initial state</font>  wgnuplot.ini</li>
+
+    </ul><p>
+
+      <b>ä½¿ã„æ–¹ <font color="maroon">How to use</font></b><br>
+
+      <ul>
+
+	<li><a href="HowtoGNUPLOT-04.html">ã¨ã«ã‹ããƒ—ãƒ­ãƒƒãƒˆ</a> <font color="maroon">Simple plot at first</font> <tt>plot x</tt></li>
+
+	<li><a href="HowtoGNUPLOT-05.html">æ¨ªè»¸ã®æç”»ç¯„å›²ã®æŒ‡å®š</a> <font color="maroon">Range of abscissa</font>  <tt>plot [AAA:BBB] x</tt></li>
+
+	<li><a href="HowtoGNUPLOT-06.html">ç¸¦è»¸ã®æç”»ç¯„å›²ã®æŒ‡å®š</a> <font color="maroon">Range of ordinate</font>  <tt>plot [AAA:BBB][CCC:DDD] x</tt></li>
+
+	<li><a href="HowtoGNUPLOT-07.html">æ–¹çœ¼ã‚’å…¥ã‚Œã‚‹</a> <font color="maroon">graph paper mode</font>  <tt>set grid</tt></li>
+
+	<li><a href="HowtoGNUPLOT-08.html">æ–¹çœ¼è¡¨ç¤ºã‚’ã‚„ã‚ã‚‹</a> <font color="maroon">eliminating grid</font>  <tt>set nogrid</tt></li>
+
+	<li><a href="HowtoGNUPLOT-09.html">è¤‡æ•°ã®ã‚°ãƒ©ãƒ•ã‚’åŒæ™‚æç”»</a> <font color="maroon">plotting some graphs</font>  <tt>plot x,2*x</tt></li>
+
+	<li><a href="HowtoGNUPLOT-10.html">æç”»ç¯„å›²ã‚’æŒ‡å®šã—ã¦è¤‡æ•°ã®ã‚°ãƒ©ãƒ•ã‚’æããƒ»å¿œç”¨å•é¡Œ</a> <font color="maroon">to plot some graphs in given area.</font>  <tt>plot [AAA:BBB] x,2*x</tt></li>
+
+	<li><a href="HowtoGNUPLOT-11.html">åˆç­‰é–¢æ•°ã®æç”»ãƒ»ç·´ç¿’å•é¡Œ</a> <font color="maroon">To plot elemental functions</font>  <tt>plot sin(x)</tt></li>
+
+	<li><a href="HowtoGNUPLOT-12.html">å¯¾æ•°ç›®ç››</a> <font color="maroon">logarithmic scale</font>  <tt>set log y</tt></li>
+
+	<li><a href="HowtoGNUPLOT-13.html">ãƒ‡ãƒ¼ã‚¿ãƒ—ãƒ­ãƒƒãƒˆã«ãƒãƒ£ãƒ¬ãƒ³ã‚¸</a> <font color="maroon">data plot</font> </li>
+
+	<li><a href="HowtoGNUPLOT-14.html">ãƒ­ãƒ¼ãƒ¬ãƒ³ãƒ„ã‚¢ãƒˆãƒ©ã‚¯ã‚¿ã‚’ãƒ—ãƒ­ãƒƒãƒˆã—ã¦ã¿ã‚‹</a> <font color="maroon">To plot Lorenz attractor</font>  <tt>plot "Lorenz.dat"</tt></li>
+
+	<li><a href="HowtoGNUPLOT-15.html">ç¸¦ï½¥æ¨ªè»¸ã«è¦‹å‡ºã—(label)ã‚’ã¤ã‘ã‚‹</a>  <font color="maroon">To put axis label</font>  <tt>set xlabel "AAA"</tt></li>
+
+	<li><a href="HowtoGNUPLOT-16.html">ï¼“æ¬¡å…ƒç©ºé–“å†…ã«è»Œé“ã‚’æç”»</a> <font color="maroon">Displaying trajectories in 3-dim. space</font>  <tt>splot "Lorenz.dat" using 2:3:4</tt></li>
+
+	<li><a href="HowtoGNUPLOT-16.5.html">ï¼’æ¬¡å…ƒæ›²é¢ã®è¡¨ç¤º</a> </li>
+
+	<li><a href="HowtoGNUPLOT-17.html">ãƒ‡ãƒ¼ã‚¿ãƒ•ã‚¡ã‚¤ãƒ«ã¨æ•°å­¦é–¢æ•°ã®ã‚°ãƒ©ãƒ•ã‚’åŒæ™‚ã«æç”»</a> <font color="maroon">To plot data and function graph</font>  <tt>plot "Lorenz.dat",sin(x)</tt></li>
+
+	<li><a href="HowtoGNUPLOT-18.html">å‡¡ä¾‹(title)ã®è¨­å®š</a> <font color="maroon">To set title of each graph</font>  <tt>plot x title "y=x"</tt></li>
+
+	<li><a href="HowtoGNUPLOT-19.html">æ¨ªè»¸ã®ç›®ç››ã®è¨­å®š</a> <font color="maroon">To set ticks mode of abscissa</font>  <tt>set xtics AAA,BBB,CCC</tt></li>
+
+	<li><a href="HowtoGNUPLOT-20.html">å°ç›®ç››ã®è¨­å®šã¨æ–¹çœ¼ã‚’å…¥ã‚Œã‚‹</a> <font color="maroon">Setting small ticks and grid</font> <tt>set mxtics AAA</tt></li>
+
+	<li><a href="HowtoGNUPLOT-21.html">ä»»æ„ã®ä½ç½®ã«ç›®ç››ã‚’å…¥ã‚Œã‚‹</a> <font color="maroon">To put tick at arbitral position</font>  <tt>set xtics("AAA" XXX,"BBB" YYY,...)</tt></li>
+
+	<li><a href="HowtoGNUPLOT-22.html">è¡¨ç¤ºã‚’ã‚¯ãƒªãƒƒãƒ—ãƒœãƒ¼ãƒ‰ã«å–ã‚Šè¾¼ã‚€</a> <font color="maroon">How to put graph into clipboard</font></li>
+
+	<li><a href="HowtoGNUPLOT-23.html">ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã‚’æ‰±ã†ã‚³ãƒãƒ³ãƒ‰</a> <font color="maroon">How to change directory, etc.</font></li>
+
+      </ul>
+
+    <hr>
+
+    <a href="../index.html">è¤‡é›‘ç³»ç§‘å­¦æ¼”ç¿’ I ã®ãƒšãƒ¼ã‚¸ã¸æˆ»ã‚‹</a>ã€€
+
+    </body>
+
+</html>
+
+
