--- a/HowtoGNUPLOT/HowtoGNUPLOT-22.html
+++ b/HowtoGNUPLOT/HowtoGNUPLOT-22.html
@@ -1,20 +1,47 @@
-<html>
-<title>How to use GNUPLOT: 19</title>
-<body>
-19. ‚±‚¤‚µ‚Ä‰æ–Ê‚Éo—Í‚Å‚«‚½Œ‹‰Ê‚ğAƒNƒŠƒbƒvƒ{[ƒh‚ğŒo—R‚µ‚Ä MS-Word ‚È‚Ç‚Ì‚Ù‚©‚ÌƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚É“\‚è•t‚¯‚æ‚¤B<br>
-<!--<font color="maroon">You can paste the result by GNUPLOT to other application windows like MS-Word by clipboard.</font>--><p>
-GNUPLOT‚Ìƒ}ƒEƒXƒ‚[ƒh‚ğ‰ğœ‚µ iƒOƒ‰ƒt•\¦ƒEƒBƒ“ƒhƒE“à‚Å 'm' ‚ğ‰Ÿ‚·jƒOƒ‰ƒt•\¦ƒEƒBƒ“ƒhƒE“à‚Å‰EƒNƒŠƒbƒN‚·‚é‚ÆAƒƒjƒ…[ƒo[‚ªŒ»‚ê‚éB<br>
-‚»‚Ì’†‚Ì"Copy to Clipboard"‚ğ‘I‘ğ‚·‚é‚Æ‰æ–Ê‚ÉŒ»İ•\¦’†‚ÌƒOƒ‰ƒt‚ª‚»‚Ì‚Ü‚ÜƒNƒŠƒbƒvƒ{[ƒh‚Éæ‚è‚Ü‚ê‚éB<br>
-<!--<font color="maroon">Click the right button in the graph window, and the menu bar appears.<br>
-Select the item "Copy to Clipboard", and the present graph is stored on the clipboard.</font>--><p>
-<img src="imgs/clipboard-1.gif" alt="ƒEƒBƒ“ƒhƒE“à‚Å‰EƒNƒŠƒbƒN"><p>
-‚ ‚Æ‚Í‚Ù‚©‚ÌƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚ÅAƒNƒŠƒbƒvƒ{[ƒh‚©‚çæ‚è‚ß‚Î‚æ‚¢B<br>
-Ÿ‚ÌƒfƒXƒNƒgƒbƒv‚Ì—á‚ÍAMS-Word ‚Éæ‚è‚ñ‚¾ê–Ê‚Å‚ ‚éB(1024x768•\¦‚ÌƒfƒXƒNƒgƒbƒv‘S‘Ì)<br>
-<!--<font color="maroon">After that, you can paste the graph by GNUPLOT on the other application.<br>
-The following example shot shows the graph is pasted onto MS-Word text. (1024x768 entire desktop)</font>--><p>
-<img src="imgs/clipboard-2.gif" alt="ƒ[ƒh‚Ö‚Ìæ‚è‚İ—á"><p>
-‚±‚±‚ÉAl@‚µ‚½‚±‚Æ‚âƒvƒƒOƒ‰ƒ€ƒŠƒXƒg‚à“Y‚¦‚ê‚ÎAƒŒƒ|[ƒg‚ªŠ®¬‚·‚éB<br>
-<!--<font color="maroon">So you can complete your report to additionally write explanations and considerations with graph.</font>--><p>
-<a href="HowtoGNUPLOT-21.html">‘O‚Ö(prev.)</a>E<a href="HowtoGNUPLOT-23.html">Ÿ‚Ö(next)</a>E<a href="Toc.html">–ÚŸ‚Ö(toc)</a>
-</body>
-</html>
+<!DOCTYPE html>
+
+<html lang="ja">
+
+	<head>
+		<meta charset="UTF-8">
+  <title>How to use GNUPLOT: 19</title>
+	</head>
+
+
+<body>
+
+19. ã“ã†ã—ã¦ç”»é¢ã«å‡ºåŠ›ã§ããŸçµæœã‚’ã€ã‚¯ãƒªãƒƒãƒ—ãƒœãƒ¼ãƒ‰ã‚’çµŒç”±ã—ã¦ MS-Word ãªã©ã®ã»ã‹ã®ã‚¢ãƒ—ãƒªã‚±ãƒ¼ã‚·ãƒ§ãƒ³ã«è²¼ã‚Šä»˜ã‘ã‚ˆã†ã€‚<br>
+
+<!--<font color="maroon">You can paste the result by GNUPLOT to other application windows like MS-Word by clipboard.</font>--><p>
+
+GNUPLOTã®ãƒã‚¦ã‚¹ãƒ¢ãƒ¼ãƒ‰ã‚’è§£é™¤ã— ï¼ˆã‚°ãƒ©ãƒ•è¡¨ç¤ºã‚¦ã‚£ãƒ³ãƒ‰ã‚¦å†…ã§ 'm' ã‚’æŠ¼ã™ï¼‰ã‚°ãƒ©ãƒ•è¡¨ç¤ºã‚¦ã‚£ãƒ³ãƒ‰ã‚¦å†…ã§å³ã‚¯ãƒªãƒƒã‚¯ã™ã‚‹ã¨ã€ãƒ¡ãƒ‹ãƒ¥ãƒ¼ãƒãƒ¼ãŒç¾ã‚Œã‚‹ã€‚<br>
+
+ãã®ä¸­ã®"Copy to Clipboard"ã‚’é¸æŠã™ã‚‹ã¨ç”»é¢ã«ç¾åœ¨è¡¨ç¤ºä¸­ã®ã‚°ãƒ©ãƒ•ãŒãã®ã¾ã¾ã‚¯ãƒªãƒƒãƒ—ãƒœãƒ¼ãƒ‰ã«å–ã‚Šè¾¼ã¾ã‚Œã‚‹ã€‚<br>
+
+<!--<font color="maroon">Click the right button in the graph window, and the menu bar appears.<br>
+
+Select the item "Copy to Clipboard", and the present graph is stored on the clipboard.</font>--><p>
+
+<img src="imgs/clipboard-1.gif" alt="ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦å†…ã§å³ã‚¯ãƒªãƒƒã‚¯"><p>
+
+ã‚ã¨ã¯ã»ã‹ã®ã‚¢ãƒ—ãƒªã‚±ãƒ¼ã‚·ãƒ§ãƒ³ã§ã€ã‚¯ãƒªãƒƒãƒ—ãƒœãƒ¼ãƒ‰ã‹ã‚‰å–ã‚Šè¾¼ã‚ã°ã‚ˆã„ã€‚<br>
+
+æ¬¡ã®ãƒ‡ã‚¹ã‚¯ãƒˆãƒƒãƒ—ã®ä¾‹ã¯ã€MS-Word ã«å–ã‚Šè¾¼ã‚“ã å ´é¢ã§ã‚ã‚‹ã€‚(1024x768è¡¨ç¤ºã®ãƒ‡ã‚¹ã‚¯ãƒˆãƒƒãƒ—å…¨ä½“)<br>
+
+<!--<font color="maroon">After that, you can paste the graph by GNUPLOT on the other application.<br>
+
+The following example shot shows the graph is pasted onto MS-Word text. (1024x768 entire desktop)</font>--><p>
+
+<img src="imgs/clipboard-2.gif" alt="ãƒ¯ãƒ¼ãƒ‰ã¸ã®å–ã‚Šè¾¼ã¿ä¾‹"><p>
+
+ã“ã“ã«ã€è€ƒå¯Ÿã—ãŸã“ã¨ã‚„ãƒ—ãƒ­ã‚°ãƒ©ãƒ ãƒªã‚¹ãƒˆã‚‚æ·»ãˆã‚Œã°ã€ãƒ¬ãƒãƒ¼ãƒˆãŒå®Œæˆã™ã‚‹ã€‚<br>
+
+<!--<font color="maroon">So you can complete your report to additionally write explanations and considerations with graph.</font>--><p>
+
+<a href="HowtoGNUPLOT-21.html">å‰ã¸(prev.)</a>ãƒ»<a href="HowtoGNUPLOT-23.html">æ¬¡ã¸(next)</a>ãƒ»<a href="Toc.html">ç›®æ¬¡ã¸(toc)</a>
+
+</body>
+
+</html>
+
+
