--- a/HowtoGNUPLOT/HowtoGNUPLOT-21.html
+++ b/HowtoGNUPLOT/HowtoGNUPLOT-21.html
@@ -1,15 +1,36 @@
-<html>
-<title>How to use GNUPLOT: 18</title>
-<body>
-18. å–Ú·‚ğŠ®‘S‚É©—R‚Éw’è‚·‚é‚±‚Æ‚ào—ˆ‚éBŸ‚Ì—á‚ğ‚µ‚Ä‚İ‚æ‚¤B<br>
-<!--<font color="maroon">Of course, you can freely put main ticks. Try the following.</font>--><p>
-<tt>set angles radian</tt><br>
-<tt>set xtics( "0" 0, "pi" pi, "2pi" 2*pi )</tt><br>
-<tt>plot [0:2*pi] sin(x)</tt><p>
-<img src="imgs/plot-25.gif"><p>
-‰¡²‚Ì–Ú·‚ÍAw’è‚³‚ê‚½ˆÊ’u‚Éw’è‚³‚ê‚½•¶š—ñ‚ª•À‚ÔŒ`®‚É‚È‚Á‚Ä‚¢‚éB<br>
-ytics ‚É‘Î‚µ‚Ä‚à“¯—l‚Èİ’è‚ª‰Â”\‚Å‚ ‚éB<br>
-<!--<font color="maroon">For the abscissa, you can put the arbitral string at the given position as ticks.</font>--><p>
-<a href="HowtoGNUPLOT-20.html">‘O‚Ö(prev.)</a>E<a href="HowtoGNUPLOT-22.html">Ÿ‚Ö(next)</a>E<a href="Toc.html">–ÚŸ‚Ö(toc)</a>
-</body>
-</html>
+<!DOCTYPE html>
+
+<html lang="ja">
+
+	<head>
+    <meta charset="UTF-8">
+		<title>How to use GNUPLOT: 18</title>
+	</head>
+
+  <body>
+
+18. ä¸»ç›®ç››ã‚’å®Œå…¨ã«è‡ªç”±ã«æŒ‡å®šã™ã‚‹ã“ã¨ã‚‚å‡ºæ¥ã‚‹ã€‚æ¬¡ã®ä¾‹ã‚’è©¦ã—ã¦ã¿ã‚ˆã†ã€‚<br>
+
+<!--<font color="maroon">Of course, you can freely put main ticks. Try the following.</font>--><p>
+
+<tt>set angles radian</tt><br>
+
+<tt>set xtics( "0" 0, "pi" pi, "2pi" 2*pi )</tt><br>
+
+<tt>plot [0:2*pi] sin(x)</tt><p>
+
+<img src="imgs/plot-25.gif"><p>
+
+æ¨ªè»¸ã®ç›®ç››ã¯ã€æŒ‡å®šã•ã‚ŒãŸä½ç½®ã«æŒ‡å®šã•ã‚ŒãŸæ–‡å­—åˆ—ãŒä¸¦ã¶å½¢å¼ã«ãªã£ã¦ã„ã‚‹ã€‚<br>
+
+ytics ã«å¯¾ã—ã¦ã‚‚åŒæ§˜ãªè¨­å®šãŒå¯èƒ½ã§ã‚ã‚‹ã€‚<br>
+
+<!--<font color="maroon">For the abscissa, you can put the arbitral string at the given position as ticks.</font>--><p>
+
+<a href="HowtoGNUPLOT-20.html">å‰ã¸(prev.)</a>ãƒ»<a href="HowtoGNUPLOT-22.html">æ¬¡ã¸(next)</a>ãƒ»<a href="Toc.html">ç›®æ¬¡ã¸(toc)</a>
+
+</body>
+
+</html>
+
+
