--- a/HowtoGNUPLOT/HowtoGNUPLOT-18.html
+++ b/HowtoGNUPLOT/HowtoGNUPLOT-18.html
@@ -1,18 +1,41 @@
-<html>
-<title>How to use GNUPLOT: 15</title>
-<body>
-15. ‚¢‚Â‚à‰Eã‚É•\¦‚³‚ê‚Ä‚¢‚é–}—á(title)‚Í©—R‚Éw’è‚Å‚«‚éBŸ‚Ì—á‚Å‚µ‚Ä‚İ‚éB<br>
-<!--<font color="maroon">Here we will study how to set titles for respective lines shown in the upper right corner.</font>--><p>
-<tt>plot -x title "y=-x"</tt><p>
-<img src="imgs/plot-19.gif"><p>
-–}—á‚ğ•\¦‚³‚¹‚È‚¢‚æ‚¤‚É‚ào—ˆ‚éB<br>
-<!--<font color="maroon">You can eliminate titles.</font>--><p>
-<tt>plot -x notitle</tt><p>
-<img src="imgs/plot-20.gif"><p>
-•¡”‚ÌƒOƒ‰ƒt‚ğd‚Ë‚Ä•`‚­Û‚É‚ÍA‚»‚ê‚¼‚ê‚É–}—á•\¦‚ÌŒ`‚ğw¦‚Å‚«‚éB<br>
-<!--<font color="maroon">When you display some lines, you can set title strings respectively.</font>--><p>
-<tt>plot -x notitle,sin(x) title "sinusoidal func.",2*x title " y=2x"</tt><p>
-<img src="imgs/plot-21.gif"><p>
-<a href="HowtoGNUPLOT-17.html">‘O‚Ö(prev.)</a>E<a href="HowtoGNUPLOT-19.html">Ÿ‚Ö(next)</a>E<a href="Toc.html">–ÚŸ‚Ö(toc)</a>
-</body>
-</html>
+<!DOCTYPE html>
+
+<html lang="ja">
+
+	<head>
+		<meta charset="UTF-8">
+		<title>How to use GNUPLOT: 15</title>
+	</head>
+<body>
+
+15. ã„ã¤ã‚‚å³ä¸Šã«è¡¨ç¤ºã•ã‚Œã¦ã„ã‚‹å‡¡ä¾‹(title)ã¯è‡ªç”±ã«æŒ‡å®šã§ãã‚‹ã€‚æ¬¡ã®ä¾‹ã§è©¦ã—ã¦ã¿ã‚‹ã€‚<br>
+
+<!--<font color="maroon">Here we will study how to set titles for respective lines shown in the upper right corner.</font>--><p>
+
+<tt>plot -x title "y=-x"</tt><p>
+
+<img src="imgs/plot-19.gif"><p>
+
+å‡¡ä¾‹ã‚’è¡¨ç¤ºã•ã›ãªã„ã‚ˆã†ã«ã‚‚å‡ºæ¥ã‚‹ã€‚<br>
+
+<!--<font color="maroon">You can eliminate titles.</font>--><p>
+
+<tt>plot -x notitle</tt><p>
+
+<img src="imgs/plot-20.gif"><p>
+
+è¤‡æ•°ã®ã‚°ãƒ©ãƒ•ã‚’é‡ã­ã¦æãéš›ã«ã¯ã€ãã‚Œãã‚Œã«å‡¡ä¾‹è¡¨ç¤ºã®å½¢ã‚’æŒ‡ç¤ºã§ãã‚‹ã€‚<br>
+
+<!--<font color="maroon">When you display some lines, you can set title strings respectively.</font>--><p>
+
+<tt>plot -x notitle,sin(x) title "sinusoidal func.",2*x title " y=2x"</tt><p>
+
+<img src="imgs/plot-21.gif"><p>
+
+<a href="HowtoGNUPLOT-17.html">å‰ã¸(prev.)</a>ãƒ»<a href="HowtoGNUPLOT-19.html">æ¬¡ã¸(next)</a>ãƒ»<a href="Toc.html">ç›®æ¬¡ã¸(toc)</a>
+
+</body>
+
+</html>
+
+
