--- a/HowtoGNUPLOT/HowtoGNUPLOT-17.html
+++ b/HowtoGNUPLOT/HowtoGNUPLOT-17.html
@@ -1,17 +1,40 @@
-<html>
-<title>How to use GNUPLOT: 14</title>
-<body>
-14. ‚QŸŒ³‚ÌƒOƒ‰ƒt‚É˜b‘è‚ğ–ß‚·B<br>
-<!--<font color="maroon">Now we will return to 2-dim. graph.</font>--><p>
-GNUPLOT‚Å‚ÍAƒf[ƒ^ƒtƒ@ƒCƒ‹‚©‚ç‚Ì“Ç‚İ‚İƒf[ƒ^‚ÆŠÖ”‚ÌƒOƒ‰ƒt‚ğ“¯‚É•`‚­‚±‚Æ‚ªo—ˆ‚éB<br>
-Ÿ‚Ì—á‚ğ‚µ‚Ä‚İ‚æ‚¤B<br>
-<!--<font color="maroon">GNUPLOT can display data plot and function graph simultaneously. Try the following</font>--><p> 
-<tt>plot [0:10] "Lorenz.txt" using 1:2 with lines, 5*sin(x)</tt><p>
-<img src="imgs/Lorenz-gp13.gif"><p>
-•¡G‚É•Ï‰»‚·‚éƒ[ƒŒƒ“ƒc•û’ö®‚ÌX(t)‚ÆA’P’²‚È³Œ·ŠÖ”‚Ì”gŒ`‚ªˆê‚Â‚Ì‰¡²‚É‘Î‚µ‚Ä“¯‚É•`‰æ‚³‚ê‚Ä‚¢‚éB<br>
-‚±‚Ì‹@”\‚ğg‚¤‚ÆA—á‚¦‚Î‘ª’è’l‚Æ—˜_®‚ÌŒ‹‰Ê‚ğ“¯‚É•`‚¢‚Ä”äŠrŒŸ“¢‚·‚é‚±‚Æ‚ªo—ˆ‚éB<br>
-<!--<font color="maroon">You will see the plot of X(t) of Lorenz's eq. and the simple sinusoidal curve.<br>
-In this way, for example, you can compare your experimental results and theoretical answers.</font>--><p>
-<a href="HowtoGNUPLOT-16.5.html">‘O‚Ö(prev.)</a>E<a href="HowtoGNUPLOT-18.html">Ÿ‚Ö(next)</a>E<a href="Toc.html">–ÚŸ‚Ö(toc)</a>
-</body>
-</html>
+<!DOCTYPE html>
+
+<html lang="ja">
+
+	<head>
+		<meta charset="UTF-8">
+		<title>How to use GNUPLOT: 14</title>
+	</head>
+
+<body>
+
+14. ï¼’æ¬¡å…ƒã®ã‚°ãƒ©ãƒ•ã«è©±é¡Œã‚’æˆ»ã™ã€‚<br>
+
+<!--<font color="maroon">Now we will return to 2-dim. graph.</font>--><p>
+
+GNUPLOTã§ã¯ã€ãƒ‡ãƒ¼ã‚¿ãƒ•ã‚¡ã‚¤ãƒ«ã‹ã‚‰ã®èª­ã¿è¾¼ã¿ãƒ‡ãƒ¼ã‚¿ã¨é–¢æ•°ã®ã‚°ãƒ©ãƒ•ã‚’åŒæ™‚ã«æãã“ã¨ãŒå‡ºæ¥ã‚‹ã€‚<br>
+
+æ¬¡ã®ä¾‹ã‚’è©¦ã—ã¦ã¿ã‚ˆã†ã€‚<br>
+
+<!--<font color="maroon">GNUPLOT can display data plot and function graph simultaneously. Try the following</font>--><p> 
+
+<tt>plot [0:10] "Lorenz.txt" using 1:2 with lines, 5*sin(x)</tt><p>
+
+<img src="imgs/Lorenz-gp13.gif"><p>
+
+è¤‡é›‘ã«å¤‰åŒ–ã™ã‚‹ãƒ­ãƒ¼ãƒ¬ãƒ³ãƒ„æ–¹ç¨‹å¼ã®X(t)ã¨ã€å˜èª¿ãªæ­£å¼¦é–¢æ•°ã®æ³¢å½¢ãŒä¸€ã¤ã®æ¨ªè»¸ã«å¯¾ã—ã¦åŒæ™‚ã«æç”»ã•ã‚Œã¦ã„ã‚‹ã€‚<br>
+
+ã“ã®æ©Ÿèƒ½ã‚’ä½¿ã†ã¨ã€ä¾‹ãˆã°æ¸¬å®šå€¤ã¨ç†è«–å¼ã®çµæœã‚’åŒæ™‚ã«æã„ã¦æ¯”è¼ƒæ¤œè¨ã™ã‚‹ã“ã¨ãŒå‡ºæ¥ã‚‹ã€‚<br>
+
+<!--<font color="maroon">You will see the plot of X(t) of Lorenz's eq. and the simple sinusoidal curve.<br>
+
+In this way, for example, you can compare your experimental results and theoretical answers.</font>--><p>
+
+<a href="HowtoGNUPLOT-16.5.html">å‰ã¸(prev.)</a>ãƒ»<a href="HowtoGNUPLOT-18.html">æ¬¡ã¸(next)</a>ãƒ»<a href="Toc.html">ç›®æ¬¡ã¸(toc)</a>
+
+</body>
+
+</html>
+
+
